@@ -15,6 +15,7 @@ Revision history for Test-Harness
           as well as Perl scripts (#59186).
         - Made it possible to run executable tests in the current
           directory (#59457).
+        - Add --trap (summary on Ctrl-C) option to prove (#59427).
 
 3.21    2010-01-30
         - Add test to ensure we're not depending on a module we no
